--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,5 @@
-<h2>Hello</h2>
+<h2 class="header">Chris Vincent's Interview App</h2>
 
-<LinkTo @route="posts" class="button">Click to view posts!</LinkTo>
+<div class="container">
+    <LinkTo @route="posts" class="button">Click to view posts!</LinkTo>
+</div>
