--- a/app/templates/posts.hbs
+++ b/app/templates/posts.hbs
@@ -1,9 +1,11 @@
-<h2>Posts</h2>
+<h2 class="header">Posts</h2>
 
-<div class="posts">
-    <ul class="results">
-        {{#each @model as |post|}}
-            <li class="entry"><Entry @post={{post}}/> <Modal @post={{post}}/></li>
-        {{/each}}
-    </ul>
-</div>  
+<div class="container">
+    <div class="posts">
+        <ul class="results">
+            {{#each @model as |post|}}
+                <li class="entry"><Entry @post={{post}}/> <Modal @post={{post}}/></li>
+            {{/each}}
+        </ul>
+    </div>  
+</div>
