styled button on home page and added media queries

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,7 @@
 <h2 class="header">Chris Vincent's Interview App</h2>
 
 <div class="container">
-    <LinkTo @route="posts" class="button">Click to view posts!</LinkTo>
+    <div class="homeDiv">
+        <LinkTo @route="posts" class="homeBtn">Click to view posts!</LinkTo>
+    </div>
 </div>
